# wido

./: .env.local.example  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/clients/: page.tsx
app/hours/: page.tsx
app/notes/: page.tsx
app/timer/: page.tsx
components/: app-nav.tsx  auth-button.tsx  auth-gate.tsx  auth-sync.tsx  board-swimlanes.tsx  board-view.tsx  client-badge.tsx  client-filter.tsx  client-manager.tsx  client-picker.tsx  data-menu.tsx  floating-stopwatch.tsx  history-dialog.tsx  login-screen.tsx  lottie-background.tsx  note-dialog.tsx  note-editor.tsx  offline-provider.tsx  projects-view.tsx  reply-panel.tsx  service-worker.tsx  status-filter.tsx  stopwatch-panel.tsx  stopwatch-title.tsx  task-details.tsx  task-input.tsx  task-item.tsx  task-list.tsx  theme-toggle.tsx  version-badge.tsx
components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  (+1 more)
extension/: README.md  background.js  config.js  manifest.json  offscreen.js  popup.css  popup.html  popup.js
hooks/: stopwatch-store.ts  store.ts  use-auth.ts  use-clients.ts  use-notes.ts  use-tasks.ts
lib/: alarm.ts  debug.ts  hard-reset.ts  merge.ts  realtime.ts  status.ts  supabase.ts  types.ts  utils.ts  version.ts
public/: sw.js
scripts/: dev.mjs  generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: app_state_history.sql  schema.sql
(+8 files in other folders)
