[package]
name = "tasks"
version = "0.1.0"
description = "A minimal personal task tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "tasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
